hphp/test/quick/redeclared_class_b.php.expectf
string(5) "hello"
HipHop Fatal error: Class already declared: X in %s on line 2
